--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -7,129 +7,143 @@
           </h4>
         </div>
         <div class=" card-body">
-          <button type="button" pButton icon="pi pi-file-excel" iconPos="left" label="EXCEL" (click)="exportExcel()" style="margin-right: 15px; margin-bottom: 15px;" class="ui-button-success"></button>
-          
-          
-          
-          <input pInputText type="text" placeholder="Mã WiFi" style="margin-right: 15px; height: 30px; margin-bottom: 15px; width: 120px;"  (input)="tt.filter($event.target.value, 'mawifi', 'contains')">
-          <input pInputText type="text" placeholder="Mã SIM" style="margin-right: 15px; height: 30px; margin-bottom: 15px;  width: 120px;"  (input)="tt.filter($event.target.value, 'masim', 'contains')">
-          <input pInputText type="text" placeholder="DT SIM" style="margin-right: 15px; height: 30px; margin-bottom: 15px;  width: 120px;"  (input)="tt.filter($event.target.value, 'sdtsim', 'contains')">
-                 
-          <input pInputText type="text"  placeholder="Họ Tên" style="margin-right: 15px; height: 30px; margin-bottom: 15px;  width: 120px;" (input)="tt.filter($event.target.value, 'hoten', 'contains')">
-          <p-dropdown  [options]="trangthaitt" (onChange)="onchange($event.value)" ></p-dropdown> <span style="margin-right: 15px"></span>
-          <p-dropdown  [options]="congtacvien" (onChange)="onchangectv($event.value)" ></p-dropdown>  
-          <br/>
-          <br/>
-          <span>Chọn và thay đổi CTV     </span><p-dropdown  [options]="congtacvien" (onChange)="onchangethaydoictv($event.value)" ></p-dropdown>       
-          
+          <button type="button" pButton icon="pi pi-file-excel" iconPos="left" label="EXCEL" (click)="exportExcel()"
+            style="margin-right: 15px; margin-bottom: 15px;" class="ui-button-success"></button>
+
+
+
+          <input pInputText type="text" placeholder="Mã WiFi"
+            style="margin-right: 15px; height: 30px; margin-bottom: 15px; width: 120px;"
+            (input)="tt.filter($event.target.value, 'mawifi', 'contains')">
+          <input pInputText type="text" placeholder="Mã SIM"
+            style="margin-right: 15px; height: 30px; margin-bottom: 15px;  width: 120px;"
+            (input)="tt.filter($event.target.value, 'masim', 'contains')">
+          <input pInputText type="text" placeholder="DT SIM"
+            style="margin-right: 15px; height: 30px; margin-bottom: 15px;  width: 120px;"
+            (input)="tt.filter($event.target.value, 'sdtsim', 'contains')">
+
+          <input pInputText type="text" placeholder="Họ Tên"
+            style="margin-right: 15px; height: 30px; margin-bottom: 15px;  width: 120px;"
+            (input)="tt.filter($event.target.value, 'hoten', 'contains')">
+            <div [formGroup]="trangthaidongtienform">
+          <p-dropdown formControlName="trangthaidongtiencontrol" [options]="trangthaitt" (onChange)="onchange($event.value)"></p-dropdown> <span
+            style="margin-right: 15px"></span>
+          </div>
+          <span
+            style="margin-right: 15px"></span>
+          <div [formGroup]="congtacvienform">
+            <p-dropdown formControlName="congtacviencontrol" [options]="congtacvien" (onChange)="onchangectv($event.value)"></p-dropdown>
+          </div>
+          <br />
+          <br />
+          <span>Chọn và thay đổi CTV </span>
+          <p-dropdown [options]="congtacvien" (onChange)="onchangethaydoictv($event.value)"></p-dropdown>
+
           <!-- <div class=" table-responsive" style="margin-top: 15px;"> -->
-            <br/>
-            <br/>
-            <p-table dataKey="mawifi" editMode="row" #tt [columns]="cols" [value]="data" [paginator]="true" [rows]="20"
-              [tableStyle]="{'table-layout':'auto'}"  (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)">
+          <br />
+          <br />
+          <p-table dataKey="mawifi" editMode="row" #tt [columns]="cols" [value]="data" [paginator]="true" [rows]="20"
+            [tableStyle]="{'table-layout':'auto'}" (onRowSelect)="onRowSelect($event)"
+            (onRowUnselect)="onRowUnselect($event)">
 
 
 
-              <ng-template pTemplate="header" let-columns class=" text-primary">
-                <tr>
-                  <th></th>
-                  <th style="width: 3rem">
-                    <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
+            <ng-template pTemplate="header" let-columns class=" text-primary">
+              <tr>
+                <th></th>
+                <th style="width: 3rem">
+                  <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
                 </th>
-                  <th *ngFor="let col of columns" [pSortableColumn]="col.field">
+                <th *ngFor="let col of columns" [pSortableColumn]="col.field">
 
 
-                    {{col.header}}
+                  {{col.header}}
 
 
 
-                  </th>
+                </th>
 
-                  <th></th>
-                  <th></th>
-                </tr>
+                <th></th>
+                <th></th>
+              </tr>
 
-              </ng-template>
-              <ng-template let-i="rowIndex" pTemplate="body" let-rowData let-columns="columns" let-editing="editing" let-ri="rowIndex">
-                <tr [pEditableRow]="rowData">
-                  <td>{{i+1}}</td>
-                  <td>
-                    <p-tableCheckbox [value]="rowData"></p-tableCheckbox>
+            </ng-template>
+            <ng-template let-i="rowIndex" pTemplate="body" let-rowData let-columns="columns" let-editing="editing"
+              let-ri="rowIndex">
+              <tr [pEditableRow]="rowData">
+                <td>{{i+1}}</td>
+                <td>
+                  <p-tableCheckbox [value]="rowData"></p-tableCheckbox>
                 </td>
-                  <td *ngFor="let col of columns" >
+                <td *ngFor="let col of columns">
 
 
-                    <ng-container
-                      *ngIf="[col.field]!='facebook' && [col.header]!=''  && [col.header]!='Tháng' && [col.field]!='thanhtoan' ">
-                      {{rowData[col.field]}}
-                    </ng-container>
-                    <ng-container *ngIf="[col.field]=='thanhtoan'">
-                     
-                          {{rowData.thanhtoan | date:'MM/yyyy'}}
+                  <ng-container
+                    *ngIf="[col.field]!='facebook' && [col.header]!=''  && [col.header]!='Tháng' && [col.field]!='thanhtoan' ">
+                    {{rowData[col.field]}}
+                  </ng-container>
+                  <ng-container *ngIf="[col.field]=='thanhtoan'">
+
+                    {{rowData.thanhtoan | date:'MM/yyyy'}}
+
+                  </ng-container>
+
+                  <ng-container *ngIf="[col.field]=='facebook'">
+                    <a class=" fab fa-facebook" href="{{rowData[col.field]}}" target="_blank"
+                      style="font-size:20px;text-align: center;"> </a>
+
+                  </ng-container>
 
 
-                    </ng-container>
-
-                    
+                </td>
 
 
+                <td>
+                  <a (click)="selectNetWithButton(rowData)" routerLink="/user" [state]="(rowData)"><i class="fa fa-user"
+                      style="font-size:20px;text-align: center;"></i></a>
+                </td>
+                <td style="text-align:center">
+                  <button pButton type="button" pInitEditableRow icon="pi pi-pencil" class="ui-button-info"
+                    (click)="onRowEditInit(rowData)" style="width: 20px !important;height: 20px !important;"></button>
 
-                    <ng-container *ngIf="[col.field]=='facebook'">
-                      <a class=" fab fa-facebook" href="{{rowData[col.field]}}" target="_blank"
-                        style="font-size:20px;text-align: center;"> </a>
+                </td>
+              </tr>
+            </ng-template>
+          </p-table>
+          <div [formGroup]="userform">
+            <p-dialog header="{{editmawifi}} - {{edithoten}}" [(visible)]="displayDialog" [focusOnShow]="false"
+              [responsive]="true" showEffect="fade" [modal]="true" [style]="{width: '400px'}">
 
-                    </ng-container>
 
-
-                  </td>
-
-
-                  <td>
-                    <a (click)="selectNetWithButton(rowData)" routerLink="/user" [state]="(rowData)"><i
-                        class="fa fa-user" style="font-size:20px;text-align: center;"></i></a>
-                  </td>
-                  <td style="text-align:center">
-                    <button pButton type="button" pInitEditableRow icon="pi pi-pencil" class="ui-button-info"
-                      (click)="onRowEditInit(rowData)" style="width: 20px !important;height: 20px !important;"></button>
-
-                  </td>
-                </tr>
-              </ng-template>
-            </p-table>
-            <div [formGroup]="userform">
-              <p-dialog header="{{editmawifi}} - {{edithoten}}" [(visible)]="displayDialog" [focusOnShow]="false" [responsive]="true"
-                showEffect="fade" [modal]="true" [style]="{width: '400px'}">
-                
-                
-                  <label style="margin-top: 5px;"> Thanh Toán</label>
-                  <div>
-                  <p-calendar view="month" dateFormat="mm/yy" [showIcon]="true"
-                    [yearNavigator]="true" yearRange="2019:2030" formControlName="thanhtoanctrl" ></p-calendar>
-                </div>
-                <div style="margin-top: 10px;">
-                  <label >Trạng Thái KH</label>
-                  
+              <label style="margin-top: 5px;"> Thanh Toán</label>
               <div>
-                    <p-dropdown   [options]="trangthaikh" formControlName="trangthaikhdd" ></p-dropdown>
-                  </div>
+                <p-calendar view="month" dateFormat="mm/yy" [showIcon]="true" [yearNavigator]="true"
+                  yearRange="2019:2030" formControlName="thanhtoanctrl"></p-calendar>
+              </div>
+              <div style="margin-top: 10px;">
+                <label>Trạng Thái KH</label>
+
+                <div>
+                  <p-dropdown [options]="trangthaikh" formControlName="trangthaikhdd"></p-dropdown>
                 </div>
-                <br/>
-                <br/>
-                <br/>
-                <p-footer>
-                  <div class="ui-dialog-buttonpane ui-helper-clearfix">
-  
-                    <button type="button" pButton (click)="save()" label="Save"></button>
-                    <button type="button" pButton (click)="cancel()" label="Cancel"
-                        style="background:rgba(224, 46, 22, 0.6)"></button>
+              </div>
+              <br />
+              <br />
+              <br />
+              <p-footer>
+                <div class="ui-dialog-buttonpane ui-helper-clearfix">
+
+                  <button type="button" pButton (click)="save()" label="Save"></button>
+                  <button type="button" pButton (click)="cancel()" label="Cancel"
+                    style="background:rgba(224, 46, 22, 0.6)"></button>
                 </div>
-                </p-footer>
-  
-              </p-dialog>
-            </div>
+              </p-footer>
+
+            </p-dialog>
+          </div>
         </div>
       </div>
     </div>
-    
+
   </div>
 </div>
