--- a/src/app/pages/wifidoicaplaisim/wifidoicaplaisim.component.html
+++ b/src/app/pages/wifidoicaplaisim/wifidoicaplaisim.component.html
@@ -6,9 +6,7 @@
                     <h4 class=" card-title">DS WIFI đợi cấp lại sim</h4>
                     <br />
                     <div>
-                        <button type="button" pButton icon="fa fa-plus" (click)="showDialogToAdd()"
-                            label="Add"></button>
-
+                        
 
                         <button type="button" pButton icon="pi pi-file-excel" iconPos="left" label="EXCEL"
                             (click)="exportExcel()" style="margin-left: 15px; margin-bottom: 15px; margin-right: 15px;"
@@ -56,15 +54,15 @@
 
                                     <td>
 
-
+<!-- 
                                         <p-cellEditor>
                                             <ng-template pTemplate="input">
                                                 <input pInputText type="text" [(ngModel)]="rowData.mawifi" required>
                                             </ng-template>
-                                            <ng-template pTemplate="output">
+                                            <ng-template pTemplate="output"> -->
                                                 {{rowData.mawifi}}
-                                            </ng-template>
-                                        </p-cellEditor>
+                                            <!-- </ng-template>
+                                        </p-cellEditor> -->
 
                                     </td>
                                     <td>
@@ -118,7 +116,7 @@
                 </div>
             </div>
 
-            <p-dialog header="WiFi" [(visible)]="displayDialog" [focusOnShow]="false" [responsive]="true"
+            <!-- <p-dialog header="WiFi" [(visible)]="displayDialog" [focusOnShow]="false" [responsive]="true"
                 showEffect="fade" [modal]="true"
                 style="display: block; width: 300px; visibility: visible; left: 49.5px; top: 227px; z-index: 1004;"
                 [style]="{width: '400px'}" [formGroup]="wifiform">
@@ -138,7 +136,7 @@
                     </div>
                 </p-footer>
 
-            </p-dialog>
+            </p-dialog> -->
         </div>
 
     </div>
