--- a/src/app/pages/typography/typography.component.html
+++ b/src/app/pages/typography/typography.component.html
@@ -27,7 +27,11 @@
           <span ><b>Chọn và thay đổi Thanh Toán </b></span>
           <p-calendar view="month" dateFormat="mm/yy" [showIcon]="true" [yearNavigator]="true" yearRange="2019:2030"
             (onSelect)="onSelectThanhToan($event)"></p-calendar>
-          <br/>
+          
+            <span style="margin-left: 40px;"> <b>Chọn và thay đổi Trang Thai </b></span>
+            <p-dropdown [options]="thaydoitrangthaigroup" (onChange)="onchangethaydoitrangthaigroup($event.value)"></p-dropdown>
+              
+            <br/>
           <br/>
 
           <p-table dataKey="mawifi" editMode="row" #tt [columns]="cols" [value]="data" [paginator]="true" [rows]="20"
